# trading_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  graph.py  main.py  pyproject.toml  scheduler.py  state.py
agents/: fundamental.py  news.py  supervisor.py  technical.py
broker/: alpaca.py  base.py  ibkr.py  robinhood.py
docs/superpowers/plans/: 2026-06-28-trading-agent.md
docs/superpowers/specs/: 2026-06-25-trading-agent-design.md
tests/: test_broker.py  test_fundamental.py  test_graph.py  test_news.py  test_state.py  test_supervisor.py  test_technical.py
