[project]
name = "trading-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "robin-stocks>=3.0",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b",
    "requests>=2.31",
    "alpaca-py>=0.29",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "broker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
